// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";


option go_package = "github.com/fluffy-bunny/benthos-cloudevents-fluffycore/pkg/proto/cloudeventprocessor;cloudeventprocessor";
option java_multiple_files = true;
option java_package = "com.fluffybunny.benthos.cloudeventprocessor";
option java_outer_classname = "CloudEventProcessor";
option csharp_namespace = "FluffyBunny.Benthos.CloudEventProcessor";

package pkg.proto.cloudeventprocessor;

import "pkg/proto/cloudevents/cloudevents.proto";
 
// The greeting service definition.
service CloudEventProcessor {
  // Processes a batch of cloud events.  This is an all or nothing operation.  If any of the events fail to process, then the entire batch is considered a failure.
  rpc ProcessCloudEvents (ProcessCloudEventsRequest) returns (ProcessCloudEventsResponse) {  }
}
 
message ProcessCloudEventsRequest {
    io.cloudevents.v1.CloudEventBatch batch = 1;
}

message ProcessCloudEventsResponse {}

 